tests/fixtures/invalid/struct_initializer_too_long.c
struct Point {
    int x;
    int y;
};

int main(void) {
    struct Point point = {1, 2, 3};
    return point.x;
}
